# django-rest-framework-mcp

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: ci.yml  claude-code-review.yml
demo/: README.md
demo/blog/: models.py  serializers.py  views.py
demo/blog/management/commands/: setup_test_auth.py
djangorestframework_mcp/: registry.py  schema.py  test.py  views.py
tests/: conftest.py  factories.py  models.py  test_decorators.py  test_integration.py  test_json_rpc_compliance.py  test_mcp_views.py  test_registry.py  test_regression.py  test_schema.py  test_settings.py  test_test_utilities.py  urls.py
