[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Matches our other Django repos (shiftops-api's flake8 config).
line-length = 120
target-version = "py314"
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "source-code-of-dependencies/",
    "external-docs/",
]

[tool.ruff.lint]
# Mirror shiftops-api flake8 defaults: pycodestyle (E/W) + pyflakes (F).
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files are ok
"tests/*" = ["F403", "F405"]  # star imports are ok in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "demo.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
# Django/DRF dynamic attributes - these are runtime attributes that mypy can't see
module = "djangorestframework_mcp.*"
disable_error_code = ["attr-defined"]